--- a/index.html
+++ b/index.html
@@ -238,6 +238,26 @@
             border-top: 3px solid var(--accent); border-radius: 50%;
             animation: rotate-loader 0.8s linear infinite; margin-bottom: 20px;
         }
+        /* Линия редкости для карточек скинов */
+.item-card {
+    position: relative; /* Чтобы линия прилипла к низу */
+}
+
+.rarity-line {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 4px;
+    border-radius: 0 0 10px 10px;
+}
+
+/* Цвета для разных типов */
+.rare-covert { background: #eb4b4b; box-shadow: 0 -2px 10px rgba(235, 75, 75, 0.5); }
+.rare-classified { background: #d32ce6; box-shadow: 0 -2px 10px rgba(211, 44, 230, 0.5); }
+.rare-restricted { background: #8847ff; box-shadow: 0 -2px 10px rgba(136, 71, 255, 0.5); }
+.rare-milspec { background: #4b69ff; box-shadow: 0 -2px 10px rgba(75, 105, 255, 0.5); }
+.rare-common { background: #b0c3d9; }
     </style>
 </head>
 <body>
@@ -534,4 +554,5 @@
     </script>
 </body>
 </html>
+
 
