--- a/index.html
+++ b/index.html
@@ -253,11 +253,20 @@
 }
 
 /* Цвета для разных типов */
-.rare-covert { background: #eb4b4b; box-shadow: 0 -2px 10px rgba(235, 75, 75, 0.5); }
-.rare-classified { background: #d32ce6; box-shadow: 0 -2px 10px rgba(211, 44, 230, 0.5); }
-.rare-restricted { background: #8847ff; box-shadow: 0 -2px 10px rgba(136, 71, 255, 0.5); }
-.rare-milspec { background: #4b69ff; box-shadow: 0 -2px 10px rgba(75, 105, 255, 0.5); }
-.rare-common { background: #b0c3d9; }
+.rare-covert { background: #eb4b4b; box-shadow: 0 -4px 12px rgba(235, 75, 75, 0.8); }
+.rare-classified { background: #d32ce6; box-shadow: 0 -4px 12px rgba(211, 44, 230, 0.8); }
+.rare-restricted { background: #8847ff; box-shadow: 0 -4px 12px rgba(136, 71, 255, 0.8); }
+.rare-milspec { background: #4b69ff; box-shadow: 0 -4px 12px rgba(75, 105, 255, 0.8); }
+.rare-gold { background: #e4ae39; box-shadow: 0 -4px 12px rgba(228, 174, 57, 0.8); }
+.rare-common { background: #b0c3d9; box-shadow: 0 -2px 5px rgba(255, 255, 255, 0.2); }
+
+.rarity-line {
+    position: absolute;
+    bottom: 0; left: 0; right: 0;
+    height: 6px; 
+    z-index: 50; /* Это выведет полоску на передний план */
+    border-radius: 0 0 18px 18px;
+}
     </style>
 </head>
 <body>
@@ -572,6 +581,7 @@ ${item.price || '0.00'}
     </script>
 </body>
 </html>
+
 
 
 
