--- a/index.html
+++ b/index.html
@@ -267,6 +267,38 @@
     z-index: 50; /* Это выведет полоску на передний план */
     border-radius: 0 0 18px 18px;
 }
+        /* --- НОВЫЕ СТИЛИ МОДАЛЬНОГО ОКНА (В НИЗ БЛОКА STYLE) --- */
+.modal-overlay {
+    display: none;
+    position: fixed;
+    inset: 0;
+    background: rgba(0, 0, 0, 0.85);
+    backdrop-filter: blur(15px);
+    z-index: 10000;
+    align-items: flex-end; 
+    justify-content: center;
+    transition: opacity 0.3s ease;
+}
+
+.modal-content {
+    width: 100%;
+    background: #0f172a; 
+    border-radius: 24px 24px 0 0;
+    padding: 20px 20px 40px 20px;
+    transform: translateY(100%);
+    transition: transform 0.4s cubic-bezier(0.16, 1, 0.3, 1);
+    border-top: 1px solid rgba(0, 210, 255, 0.3);
+    display: flex;
+    flex-direction: column;
+    max-height: 90vh;
+}
+
+.modal-overlay.active { display: flex; opacity: 1; }
+.modal-overlay.active .modal-content { transform: translateY(0); }
+
+/* Убираем стрелки у поля ввода цены */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button { -webkit-appearance: none; margin: 0; }
     </style>
 </head>
 <body>
@@ -659,6 +691,7 @@ async function confirmSale() {
     </script>
 </body>
 </html>
+
 
 
 
