--- a/index.html
+++ b/index.html
@@ -387,13 +387,13 @@ input::-webkit-inner-spin-button { -webkit-appearance: none; margin: 0; }
             ПРОФИЛЬ
         </a>
     </nav>
-   <div id="sell-modal" class="modal-overlay" onclick="if(event.target === this) closeSellModal()">
+  <div id="sell-modal" class="modal-overlay" onclick="if(event.target === this) closeSellModal()">
     <div class="modal-content">
         <div style="width: 40px; height: 4px; background: rgba(255,255,255,0.1); border-radius: 10px; margin: 0 auto 15px;"></div>
 
         <div id="step-input">
             <div style="display: flex; align-items: center; gap: 15px; margin-bottom: 20px;">
-                <div style="width: 70px; height: 70px; background: rgba(255,255,255,0.03); border-radius: 15px; display:flex; align-items:center; justify-content:center;">
+                <div style="width: 70px; height: 70px; background: rgba(0,210,255,0.05); border-radius: 15px; border: 1px solid rgba(0,210,255,0.1); display:flex; align-items:center; justify-content:center;">
                     <img id="modal-img" src="" style="width: 55px; filter: drop-shadow(0 5px 15px rgba(0,0,0,0.5));">
                 </div>
                 <div>
@@ -402,38 +402,38 @@ input::-webkit-inner-spin-button { -webkit-appearance: none; margin: 0; }
                 </div>
             </div>
 
-            <div style="background: rgba(255,255,255,0.03); border-radius: 20px; border: 1px solid rgba(255,255,255,0.05); border-left: 4px solid var(--accent); padding: 20px; margin-bottom: 20px;">
-                <div style="display:flex; justify-content:space-between; font-size:10px; font-weight:800; color:rgba(255,255,255,0.3); margin-bottom:10px; text-transform:uppercase;">
+            <div style="background: rgba(0, 210, 255, 0.07); border-radius: 20px; border: 1px solid rgba(0, 210, 255, 0.2); box-shadow: inset 0 0 20px rgba(0, 210, 255, 0.05); padding: 20px; margin-bottom: 20px;">
+                <div style="display:flex; justify-content:space-between; font-size:10px; font-weight:800; color:rgba(255,255,255,0.4); margin-bottom:12px; text-transform:uppercase; letter-spacing: 1px;">
                     <span>Цена продажи</span>
                     <span style="color:var(--accent);">Комиссия 5%</span>
                 </div>
                 <div style="display:flex; align-items:center; gap:10px;">
                     <input type="number" id="sell-price-input" placeholder="0.00" 
-                           style="flex:1; background:transparent; border:none; color:white; font-size:24px; font-weight:900; outline:none;"
+                           style="flex:1; background:transparent; border:none; color:white; font-size:32px; font-weight:900; outline:none; caret-color: var(--accent);"
                            oninput="calculateFee(this.value)">
-                    <span style="font-size:16px; font-weight:900; color:rgba(255,255,255,0.2);">TON</span>
+                    <span style="font-size:20px; font-weight:900; color:var(--accent);">TON</span>
                 </div>
-                <div style="margin-top:15px; padding-top:15px; border-top: 1px solid rgba(255,255,255,0.05); display:flex; justify-content:space-between; font-size:12px;">
-                    <span style="color:rgba(255,255,255,0.5);">Вы получите на кошелек:</span>
-                    <span id="final-receive" style="color:var(--accent); font-weight:900;">0.00 TON</span>
+                <div style="margin-top:15px; padding-top:15px; border-top: 1px solid rgba(0,210,255,0.1); display:flex; justify-content:space-between; font-size:12px;">
+                    <span style="color:rgba(255,255,255,0.6); font-weight: 700;">ВЫ ПОЛУЧИТЕ:</span>
+                    <span id="final-receive" style="color:white; font-weight:900; font-size: 14px;">0.00 TON</span>
                 </div>
             </div>
 
-            <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 10px;">
-                <button class="action-btn" style="background:#1e293b; color:white; border:none; height:50px; border-radius:14px; font-weight:800;" onclick="closeSellModal()">ОТМЕНА</button>
-                <button class="action-btn" style="background:var(--accent); color:black; border:none; height:50px; border-radius:14px; font-weight:900;" onclick="goToConfirm()">ДАЛЕЕ</button>
+            <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 12px;">
+                <button class="action-btn" style="background:#1e293b; color:white; border:none; height:55px; border-radius:16px; font-weight:800;" onclick="closeSellModal()">ОТМЕНА</button>
+                <button class="action-btn" style="background:var(--accent); color:black; border:none; height:55px; border-radius:16px; font-weight:900; box-shadow: 0 4px 15px rgba(0,210,255,0.3);" onclick="goToConfirm()">ДАЛЕЕ</button>
             </div>
         </div>
 
-        <div id="step-confirm" style="display: none; text-align: center;">
-            <div style="font-size: 40px; margin-bottom: 10px;">🧾</div>
-            <h3 style="color:white; font-weight:900; margin-bottom:5px;">ПРОВЕРЬТЕ ДАННЫЕ</h3>
-            <p style="color:rgba(255,255,255,0.5); font-size:13px; margin-bottom:25px;">
-                Скин будет выставлен за <span id="confirm-price-val" style="color:white; font-weight:900;">0.00</span> TON. Отменить продажу можно в любой момент.
+        <div id="step-confirm" style="display: none; text-align: center; padding: 10px 0;">
+            <div style="font-size: 50px; margin-bottom: 15px; filter: drop-shadow(0 0 10px var(--accent));">💎</div>
+            <h3 style="color:white; font-weight:900; margin-bottom:8px; text-transform: uppercase;">Разместить лот?</h3>
+            <p style="color:rgba(255,255,255,0.5); font-size:14px; line-height: 1.5; margin-bottom:30px; padding: 0 20px;">
+                Ваш предмет будет выставлен на маркет за <span id="confirm-price-val" style="color:var(--accent); font-weight:900;">0.00</span> TON.
             </p>
-            <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 10px;">
-                <button class="action-btn" style="background:#1e293b; color:white; border:none; height:50px; border-radius:14px; font-weight:800;" onclick="backToInput()">НАЗАД</button>
-                <button class="action-btn" style="background:var(--accent); color:black; border:none; height:50px; border-radius:14px; font-weight:900;" onclick="startCartAnimation()">ВЫСТАВИТЬ</button>
+            <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 12px;">
+                <button class="action-btn" style="background:#1e293b; color:white; border:none; height:55px; border-radius:16px; font-weight:800;" onclick="backToInput()">НАЗАД</button>
+                <button class="action-btn" style="background:var(--accent); color:black; border:none; height:55px; border-radius:16px; font-weight:900;" onclick="startCartAnimation()">ВЫСТАВИТЬ</button>
             </div>
         </div>
     </div>
@@ -700,6 +700,7 @@ if (window.visualViewport) {
     </script>
 </body>
 </html>
+
 
 
 
