--- a/index.html
+++ b/index.html
@@ -402,22 +402,25 @@ input::-webkit-inner-spin-button { -webkit-appearance: none; margin: 0; }
                 </div>
             </div>
 
-            <div style="background: rgba(0, 210, 255, 0.07); border-radius: 20px; border: 1px solid rgba(0, 210, 255, 0.2); box-shadow: inset 0 0 20px rgba(0, 210, 255, 0.05); padding: 20px; margin-bottom: 20px;">
-                <div style="display:flex; justify-content:space-between; font-size:10px; font-weight:800; color:rgba(255,255,255,0.4); margin-bottom:12px; text-transform:uppercase; letter-spacing: 1px;">
-                    <span>Цена продажи</span>
-                    <span style="color:var(--accent);">Комиссия 5%</span>
-                </div>
-                <div style="display:flex; align-items:center; gap:10px;">
-                    <input type="number" id="sell-price-input" placeholder="0.00" 
-                           style="flex:1; background:transparent; border:none; color:white; font-size:32px; font-weight:900; outline:none; caret-color: var(--accent);"
-                           oninput="calculateFee(this.value)">
-                    <span style="font-size:20px; font-weight:900; color:var(--accent);">TON</span>
-                </div>
-                <div style="margin-top:15px; padding-top:15px; border-top: 1px solid rgba(0,210,255,0.1); display:flex; justify-content:space-between; font-size:12px;">
-                    <span style="color:rgba(255,255,255,0.6); font-weight: 700;">ВЫ ПОЛУЧИТЕ:</span>
-                    <span id="final-receive" style="color:white; font-weight:900; font-size: 14px;">0.00 TON</span>
-                </div>
-            </div>
+           <div style="background: rgba(0, 210, 255, 0.07); border-radius: 20px; border: 1px solid rgba(0, 210, 255, 0.2); box-shadow: inset 0 0 20px rgba(0, 210, 255, 0.05); padding: 20px; margin-bottom: 20px;">
+    
+    <div style="display:flex; justify-content:space-between; font-size:10px; font-weight:800; color:rgba(255,255,255,0.4); margin-bottom:12px; text-transform:uppercase; letter-spacing: 1px;">
+        <span>Цена продажи</span>
+        <span style="color:var(--accent);">Комиссия 5%</span>
+    </div>
+
+    <div style="background: rgba(0, 0, 0, 0.3); border-radius: 14px; padding: 12px 16px; display: flex; align-items: center; gap: 10px; border: 1px solid rgba(255,255,255,0.05);">
+        <input type="number" id="sell-price-input" placeholder="0.00" 
+               style="flex:1; background:transparent; border:none; color:white; font-size:32px; font-weight:900; outline:none; caret-color: var(--accent);"
+               oninput="calculateFee(this.value)">
+        <span style="font-size:20px; font-weight:900; color:var(--accent); opacity: 0.8;">TON</span>
+    </div>
+
+    <div style="margin-top:15px; padding-top:15px; border-top: 1px solid rgba(0,210,255,0.1); display:flex; justify-content:space-between; font-size:12px;">
+        <span style="color:rgba(255,255,255,0.6); font-weight: 700;">ВЫ ПОЛУЧИТЕ:</span>
+        <span id="final-receive" style="color:white; font-weight:900; font-size: 14px;">0.00 TON</span>
+    </div>
+</div>
 
             <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 12px;">
                 <button class="action-btn" style="background:#1e293b; color:white; border:none; height:55px; border-radius:16px; font-weight:800;" onclick="closeSellModal()">ОТМЕНА</button>
@@ -700,6 +703,7 @@ if (window.visualViewport) {
     </script>
 </body>
 </html>
+
 
 
 
