--- a/index.html
+++ b/index.html
@@ -409,12 +409,12 @@ input::-webkit-inner-spin-button { -webkit-appearance: none; margin: 0; }
         <span style="color:var(--accent);">Комиссия 5%</span>
     </div>
 
-    <div style="background: rgba(0, 0, 0, 0.3); border-radius: 14px; padding: 12px 16px; display: flex; align-items: center; gap: 10px; border: 1px solid rgba(255,255,255,0.05);">
-        <input type="number" id="sell-price-input" placeholder="0.00" 
-               style="flex:1; background:transparent; border:none; color:white; font-size:32px; font-weight:900; outline:none; caret-color: var(--accent);"
-               oninput="calculateFee(this.value)">
-        <span style="font-size:20px; font-weight:900; color:var(--accent); opacity: 0.8;">TON</span>
-    </div>
+    <div style="background: rgba(0, 0, 0, 0.3); border-radius: 12px; padding: 8px 14px; display: flex; align-items: center; gap: 8px; border: 1px solid rgba(255,255,255,0.05); height: 45px;">
+    <input type="number" id="sell-price-input" placeholder="0.00" 
+           style="flex:1; background:transparent; border:none; color:white; font-size:22px; font-weight:900; outline:none; caret-color: var(--accent); width: 100%;"
+           oninput="calculateFee(this.value)">
+    <span style="font-size:14px; font-weight:900; color:var(--accent); opacity: 0.7; letter-spacing: 0.5px;">TON</span>
+</div>
 
     <div style="margin-top:15px; padding-top:15px; border-top: 1px solid rgba(0,210,255,0.1); display:flex; justify-content:space-between; font-size:12px;">
         <span style="color:rgba(255,255,255,0.6); font-weight: 700;">ВЫ ПОЛУЧИТЕ:</span>
@@ -703,6 +703,7 @@ if (window.visualViewport) {
     </script>
 </body>
 </html>
+
 
 
 
