--- a/index.html
+++ b/index.html
@@ -299,6 +299,59 @@
 /* Убираем стрелки у поля ввода цены */
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button { -webkit-appearance: none; margin: 0; }
+        /* АНИМАЦИЯ ТЕЛЕЖКИ И ГОРКИ */
+.cart-container {
+    position: fixed; 
+    bottom: 110px; 
+    left: -250px;
+    width: 140px; 
+    height: 160px; 
+    display: none; 
+    z-index: 20000; /* Выше всего контента */
+}
+.cart-container.active {
+    display: block;
+    animation: cartMoveFinal 5.5s cubic-bezier(0.4, 0, 0.2, 1) forwards;
+}
+.cart-emoji {
+    font-size: 110px; 
+    position: absolute; 
+    bottom: 0; 
+    left: 0;
+    transform: scaleX(-1); 
+    z-index: 30; 
+}
+#items-box {
+    position: absolute; 
+    bottom: 35px; 
+    left: 40px; 
+    width: 85px; 
+    height: 110px; 
+    z-index: 20;
+}
+.skin-drop-final {
+    position: absolute; 
+    width: 75px; 
+    height: 55px;
+    object-fit: contain; 
+    opacity: 0;
+    filter: drop-shadow(0 5px 10px rgba(0,0,0,0.5));
+    animation: skinFallFinal 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.1) forwards;
+}
+
+@keyframes cartMoveFinal {
+    0% { left: -250px; transform: rotate(0deg); }
+    15% { transform: rotate(-5deg); } 
+    35% { left: 50%; margin-left: -70px; transform: rotate(0deg); }
+    75% { left: 50%; margin-left: -70px; transform: rotate(0deg); }
+    85% { transform: rotate(7deg); }
+    100% { left: 130%; transform: rotate(0deg); }
+}
+
+@keyframes skinFallFinal {
+    0% { transform: translateY(-150px) scale(0) rotate(-20deg); opacity: 0; }
+    100% { transform: translateY(0) scale(1) rotate(0deg); opacity: 1; }
+}
     </style>
 </head>
 <body>
@@ -703,6 +756,7 @@ if (window.visualViewport) {
     </script>
 </body>
 </html>
+
 
 
 
