--- a/index.html
+++ b/index.html
@@ -494,6 +494,10 @@ input::-webkit-inner-spin-button { -webkit-appearance: none; margin: 0; }
         </div>
     </div>
 </div>
+    <div id="cart-anim" class="cart-container">
+    <div id="items-box"></div>
+    <div class="cart-emoji">🛒</div>
+</div>
 
     <script>
         /* ================================================================
@@ -756,6 +760,7 @@ if (window.visualViewport) {
     </script>
 </body>
 </html>
+
 
 
 
