--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+Ф<!DOCTYPE html>
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
@@ -716,9 +716,7 @@ function itemAction(type, id) {
         setTimeout(() => modal.classList.add('active'), 10);
         tg.HapticFeedback.impactOccurred('medium');
     }
-}
-        
-
+}      
 function closeSellModal() {
     const modal = document.getElementById('sell-modal');
     modal.classList.remove('active');
@@ -864,6 +862,7 @@ function closeSuccessModal() {
     </script>
 </body>
 </html>
+
 
 
 
