--- a/index.html
+++ b/index.html
@@ -495,6 +495,7 @@ input::-webkit-inner-spin-button { -webkit-appearance: none; margin: 0; }
            ================================================================
         */
         const tg = window.Telegram.WebApp;
+tg.ready();
         const API_BASE = 'https://stattrakmrkt.onrender.com';
         let cachedMarket = [];
 
@@ -862,6 +863,7 @@ function closeSuccessModal() {
     </script>
 </body>
 </html>
+
 
 
 
