--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-Ф<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
@@ -869,6 +869,7 @@ function closeSuccessModal() {
     </script>
 </body>
 </html>
+
 
 
 
