--- a/index.html
+++ b/index.html
@@ -828,8 +828,21 @@ function startCartAnimation() {
     }, 5600);
 }
     </script>
+    <div id="success-modal" class="modal">
+    <div class="modal-content success-content">
+        <div class="success-icon-container">
+            <div class="cart-animation">🛒</div> 
+        </div>
+        
+        <h2 id="success-title">Предмет выставлен</h2>
+        <p id="success-message">Ваш скин успешно добавлен на торговую площадку!</p>
+        
+        <button class="btn btn-primary" style="width: 100%;" onclick="closeSuccessModal()">Отлично</button>
+    </div>
+</div>
 </body>
 </html>
+
 
 
 
